--- a/public/main.css
+++ b/public/main.css
@@ -63,3 +63,54 @@ a:hover {
 	margin: 20px auto;
 	padding: 20px;
 }
+
+
+/* Create Page*/
+label {
+   display: block;
+   margin-top: 15px;
+}
+.form{
+	max-width: 60%;
+
+
+}
+.input{
+	display: block;
+	width: 100%;
+	padding: 10px;
+	font-size: 1.3rem;
+	border: 1px solid #ccc
+	margin-bottom:10px;
+}
+
+.btn{
+	padding: 10px, 20px;
+	font-size: 1.3rem;
+	background: tomato;
+	color: #fff;
+	border:none;
+}
+
+/* notes page styles */
+.note-wrapper {
+	display: flex;
+	max-width: 60%;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+.note{
+	font-size: 1.5rem;
+
+}
+
+.delete {
+	display: inline;
+	padding: 5px 10px;
+	background-color: tomato;
+	color: #fff;
+}
