--- a/views/home.pug
+++ b/views/home.pug
@@ -5,4 +5,4 @@ block content
   .container
     h1.intro This is a very simple Note-taking app. you can add, edit , deleete or archive notes.
 
-    a.featured(href='/create-note') Create note
+    a.featured(href='/create') Create note
