--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
         a(href='/') Notes
 
       nav.nav
-        a(href='/all-notes') All notes
+        a(href='/notes') All notes
         a(href='/archive') Archive
 
     block content
